Fix link styles in the header, break them elsewhere.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -106,8 +106,9 @@ p {
 	text-decoration: none;
 }
 
-#header a:hover {
-	text-decoration: underline;
+#header li a:hover {
+    text-decoration: none !important;
+    color: #dddddd;
 }
 
 #header {
@@ -175,10 +176,10 @@ p {
 	color: black;
 }
 
-.inline-list li a:hover span {
+/** TODO: This doesn't seem to actually work; why? */
+#main .inline-list li a:hover span, #footer .inline-list li a:hover span {
 	text-decoration: underline;
 }
-
 
 /* search */
 
